--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -1,5 +1,5 @@
 ---
-import "~/styles.css";
+import "../styles.css";
 import Header from "~/components/Header.astro";
 import Footer from "~/components/Footer.astro";
 const { title } = Astro.props;
@@ -14,7 +14,6 @@ const { title } = Astro.props;
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="../../src/styles.css" />
     <link
       href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;600&display=swap"
       rel="stylesheet"
