--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,6 +1,7 @@
 ---
 import BaseLayout from "~/layouts/BaseLayout.astro";
 import { getCollection } from "astro:content";
+import '../styles.css';
 
 const posts = (await getCollection("blog")).sort((a, b) => {
   return new Date(b.data.date).getTime() - new Date(a.data.date).getTime();
