--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -2,6 +2,7 @@
 import "../styles.css";
 import Header from "~/components/Header.astro";
 import Footer from "~/components/Footer.astro";
+import Analytics from '@vercel/analytics/astro'
 const { title } = Astro.props;
 ---
 
@@ -28,5 +29,6 @@ const { title } = Astro.props;
       <slot />
     </main>
     <Footer />
+    <Analytics/>
   </body>
 </html>
