feat: reworked header and added first post

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -25,18 +25,18 @@
       </li>
       <li class="w-1/3 md:w-auto">
         <a
-          href="/sobre/"
+          href="/proyectos/"
           class="navbar-link block w-full md:w-fit px-4 py-2 font-bold text-white no-underline transition-all rounded-md hover:bg-blue-800"
         >
-          Sobre mí
+          Mis proyectos
         </a>
       </li>
       <li class="w-1/3 md:w-auto">
         <a
-          href="/contacto/"
+          href="/sobre/"
           class="navbar-link block w-full md:w-fit px-4 py-2 font-bold text-white no-underline transition-all rounded-md hover:bg-blue-800"
         >
-          Contacto
+          Sobre mí
         </a>
       </li>
     </ul>
