feat: created portfolio and about me pages and changed icons hover on footer

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -15,10 +15,10 @@ const year = new Date().getFullYear();
 
     <div class="flex gap-6 text-xl">
       <a href="https://github.com/heyjuliandev/" target="_blank" class="hover:text-white transition" aria-label="GitHub">
-        <i class="fa-brands fa-github"></i>
+        <i class="fa-brands fa-github text-xl transition-all duration-300 hover-github hover:scale-110"></i>
       </a>
       <a href="https://www.linkedin.com/in/heyjuliandev/" target="_blank" class="hover:text-white transition" aria-label="LinkedIn">
-        <i class="fa-brands fa-linkedin"></i>
+        <i class="fa-brands fa-linkedin text-xl transition-all duration-300 hover-linkedin hover:scale-110"></i>
       </a>
     </div>
 
